--- a/css/style_tablette.css
+++ b/css/style_tablette.css
@@ -1,61 +1,39 @@
-@media screen and (max-width: 992px) {
-    body {
-      margin: 0px 70px;
-    }
-    .filtres {
-      gap: 1.4vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: left;
-    }
-    .main-container {
-      gap: 50px;
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .card-main {
-      min-width: 20vw;
-    }
-  
-    .card-aside-container {
-      flex-direction: row;
-      gap: 2vw;
-    }
-  
-    .info-card-aside :nth-child(1) {
-      font-size: 14px;
-      padding: 0px 2px 0px 10px;
-    }
-    .info-card-aside :nth-child(2) {
-      font-size: 13px;
-      padding: 0px 2px 0px 10px;
-    }
-  
-    aside .rating {
-      display: flex;
-      padding-left: 10px;
-    }
-  
-    .rating :nth-child(-n + 5) {
-      font-size: 12px;
-      padding: 0px;
-    }
-  
-    .activite-card {
-      height: 240px;
-      width: 18vw;
-    }
-  
-    .activite-card img {
-      height: 210px;
-    }
-  
-    footer {
-      padding-right: 10vw;
-    }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  body {
+    margin: 0px 40px;
   }
-  
-  .activite-card :nth-child(2) {
-    font-size: 15px;
+
+  .filtres {
+    flex-direction: column;
+    align-items: flex-start;
   }
+
+  .main {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 92%;
+  }
+
+  #aside {
+    width: 100%;
+  }
+
+  .container-aside {
+    flex-direction: row;
+  }
+
+  .card-aside {
+    min-height: 146px;
+    min-width: 206px;
+  }
+
+  .info-card-aside {
+    margin: 10px 10px 5px 10px;
+  }
+
+  .card-activite img{
+    height: 200px;
+  }
+}
+
+
