--- a/css/style_tablette.css
+++ b/css/style_tablette.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   body {
-    margin: 0px 40px;
+    margin: 0px 20px;
   }
 
   .filtres {
@@ -11,7 +11,11 @@
   .main {
     flex-direction: column;
     align-items: flex-start;
-    width: 92%;
+    width: 95%;
+  }
+
+  .offresMain, aside {
+    padding: 20px 19px;
   }
 
   #aside {
@@ -20,6 +24,7 @@
 
   .container-aside {
     flex-direction: row;
+    gap: 10px;
   }
 
   .card-aside {
