Toutes les sections dans le main

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ form .i-container {
 }
 
 em,
-main a,
+.hebergement a,
 aside a {
   font-style: normal;
   font-weight: 700;
@@ -187,7 +187,7 @@ aside a {
   padding: 12px 10px;
 }
 
-main {
+.hebergement {
   display: flex;
   gap: 35px;
 }
