--- a/css/style_tablette.css
+++ b/css/style_tablette.css
@@ -8,7 +8,7 @@
     align-items: flex-start;
   }
 
-  .main {
+  .hebergement {
     flex-direction: column;
     align-items: flex-start;
     width: 95%;
