--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -63,7 +63,7 @@
     min-width: 140px;
   }
 
-  .main {
+  .hebergement {
     flex-direction: column;
     align-items: flex-start;
   }
@@ -85,10 +85,6 @@
   .container-main {
     flex-direction: column;
     padding: 0px;
-  }
-
-  main a {
-    display: none;
   }
 
   .container-activite {
