--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -41,6 +41,7 @@
     border-radius: 15px;
     margin-left: -10px;
     z-index: 1;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 
   button i.fa-solid.fa-magnifying-glass {
